aiwa.log
  File "./main.py", line 85
    except Exception e:
                     ^
SyntaxError: invalid syntax
  File "./main.py", line 85
    except Exception e:
                     ^
SyntaxError: invalid syntax
  File "./main.py", line 86
    except Exception e:
                     ^
SyntaxError: invalid syntax
  File "./main.py", line 86
    except Exception e:
                     ^
SyntaxError: invalid syntax
  File "./main.py", line 89
    except Exception e:
                     ^
SyntaxError: invalid syntax
INFO:mpd:Calling MPD connect('localhost', 6600, timeout=None)
2017-08-18 10:35:25,762 - __main__ - DEBUG - Test Eintrag vor dem Start von main
2017-08-18 10:35:39,430 - __main__ - ERROR - via Tastatur beendet
2017-08-18 10:38:27,642 - __main__ - INFO - Starte die Anwendung
2017-08-18 11:09:43,346 - __main__ - ERROR - main crashed Connection lost while reading line
2017-08-18 11:43:23,205 - __main__ - INFO - Starte die Anwendung
2017-08-18 11:45:00,147 - __main__ - ERROR - via Tastatur beendet
2017-08-18 11:57:07,998 - __main__ - INFO - Starte die Anwendung
2017-08-18 11:57:13,207 - __main__ - ERROR - main crashed local variable 'state' referenced before assignment
2017-08-18 11:58:35,209 - __main__ - INFO - Starte die Anwendung
2017-08-18 11:58:36,121 - __main__ - ERROR - main crashed local variable 'state' referenced before assignment
2017-08-18 11:58:37,462 - __main__ - INFO - Starte die Anwendung
2017-08-18 11:58:37,821 - __main__ - ERROR - main crashed local variable 'state' referenced before assignment
2017-08-18 12:00:18,906 - __main__ - INFO - Starte die Anwendung
2017-08-18 12:00:20,196 - __main__ - ERROR - main crashed local variable 'state' referenced before assignment
2017-08-18 12:03:09,979 - __main__ - INFO - Starte die Anwendung
2017-08-18 12:03:23,454 - __main__ - ERROR - main crashed Already connected
2017-08-18 12:04:02,021 - __main__ - INFO - Starte die Anwendung
2017-08-18 12:05:56,095 - __main__ - ERROR - via Tastatur beendet
2017-08-18 12:06:00,441 - __main__ - INFO - Starte die Anwendung
2017-08-18 12:08:05,371 - __main__ - ERROR - main crashed [Errno 19] No such device
2017-08-18 14:46:29,904 - __main__ - INFO - Starte die Anwendung - 116
2017-08-18 14:47:54,252 - __main__ - INFO - via Tastatur beendet - 121
2017-08-18 14:48:00,389 - __main__ - INFO - Starte die Anwendung - 116
2017-08-18 15:07:00,722 - __main__ - INFO - via Tastatur beendet - 121
